src/raml1/test/data/TCK/raml-0.8/InvalidIncludeTags/test006/api.raml
#%RAML 0.8
title: test API
version: 1.0

/hierarchy:
  get:
    responses:
      200:
        body:
          application/xml:
            schema: !include schemas/scheme.json
            example: examples/test.json
